--- a/src/components/admin/admin-style/auth.scss
+++ b/src/components/admin/admin-style/auth.scss
@@ -1,3 +1,45 @@
+.auth-parent {
+    width: 40%;
+    height: 22em;
+    margin: 25vh auto;
+    background: white;
+    box-shadow: 0 0 4px rgba(0, 0, 0, 0.5);
+}
+
+.auth-wrapper {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+    img {
+        transform: scale(1.5);
+        margin: 30px 0;
+    }
+}
+
+.auth-inputs {
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 20px;
+
+    input {
+        border: none;
+        background: #efefef;
+        margin-top: 5px;
+        box-sizing: border-box;
+        border-radius: .1em;
+        height: 40px;
+        width: 320px;
+        padding-left: 15px;
+        font-size: 1em;
+    }
+}
+
+.input-wrapper {
+    margin: 10px 0;
+}
+
+
 .auth-btn {
     box-sizing: border-box;
     font: "Montserrat", sans-serif;
@@ -13,6 +55,7 @@
     font-weight: 600;
     border-radius: .1em;
     letter-spacing: .5px;
+    border-radius: .2em;
 }
 
 .auth-btn:hover {
@@ -30,4 +73,11 @@
 .admin-wrapper {
     position: absolute;
     top: 30%;
+}
+
+.button-wrapper {
+    display: flex;
+    justify-content: space-around;
+    width: 70%;
+    margin-bottom: 10px;
 }
