styling product page

--- a/src/styles/navbar.scss
+++ b/src/styles/navbar.scss
@@ -11,7 +11,7 @@ a {
 
 .nav-sticky {
     height: 40px;
-    width: 100%;
+    width: 100vw;
     background: transparent;
     justify-content: space-between;
     box-sizing: border-box;
