--- a/src/styles/detailPhotos.scss
+++ b/src/styles/detailPhotos.scss
@@ -1,9 +1,15 @@
-
 .photo-wrapper {
     width: 100%;
-    height: 300px;
+    height:100vh;
+    box-sizing: border-box;
 }
 
+.photo-wrapper {
+    box-sizing: border-box;
+    
+}
+    
 .tile-wrapper {
     width: 100%;
+    box-sizing: border-box;
 }
