--- a/src/styles/footer.scss
+++ b/src/styles/footer.scss
@@ -1,23 +1,26 @@
 .footer-parent {
-  
     background: transparent;
+    margin: 0 auto;
 }
 
-.footer-wrapper {
+.footer-container {
     width: 300px;
-    bottom: 0;
+    margin: 10% auto;
+}
+
+.link-wrapper {
     display: flex;
     justify-content: space-around;
-    margin-bottom: 30px;
-
-    span:hover {
-        cursor: pointer;
-        text-decoration: underline;
+    margin-bottom: 30px;   
+    
+     span:hover {
+      cursor: pointer;
+      text-decoration: underline;
     }
 }
 
 #copywrite {
-    margin-left: 16%;
+    margin: 0 auto;
 }
 
 @media screen
@@ -33,7 +36,7 @@ and (max-width: 568px) {
     }
 
     #copywrite {
-        margin-left: 12%;
+       margin: 0 auto;
     }
 }
 
