--- a/src/styles/landingPage.scss
+++ b/src/styles/landingPage.scss
@@ -1,3 +1,8 @@
+.landing-page-parent {
+    width: 100%;
+    height: 100%;
+}
+
 .landing-page-container{
     width: 100%;
     height: 100%;
@@ -25,6 +30,10 @@
     transform: scale(1);
     transition: transform .2s ease-in;
     z-index: 4;
+}
+
+.bottom-section {
+    
 }
 
 
