added some admin functionality and view, ternary operator for sold view, and trying to figure out a way to navigate through items in the detail view

--- a/src/styles/cart.scss
+++ b/src/styles/cart.scss
@@ -8,6 +8,10 @@ $font-var: "Montserrat", sans-serif;
     position: relative;
 }
 
+.footer-wrapper {
+    
+}
+
 .modal-background {
     opacity: 0;
     display: none;
