--- a/src/components/admin/admin-style/admin.scss
+++ b/src/components/admin/admin-style/admin.scss
@@ -1,24 +1,101 @@
-.auth-btn {
+.admin-parent {
+    height: 100%;
+    
+}
+
+.input-container {
+    margin-top: 5em;
+
+}
+
+.admin-input-wrapper {
+    display: flex;
+    margin-left: 25%;
+    align-items: center;
+    margin-bottom: 5em;
+
+    input {
+        margin-right: 15px;
+        border-radius: .2em;
+        width: 40%;
+        height: 3em;
+        background: #dddddd;
+        border-radius: .2em;
+        border-style: none;
+        box-sizing: border-box;
+        padding-left: 8px;
+        font-size: 14px;
+        // line-height: 1em;
+        padding-top: 0px;
+        padding-bottom: 0px
+    
+    }
+}
+
+.databse-table {
+    overflow: auto;
+    margin-bottom: 30%;
+}
+
+.db-bottom {
+    border-bottom: 1px solid black;
+    width: 70%;
+    margin: 0 auto;
+}
+
+.admin-btn {
     box-sizing: border-box;
     font: "Montserrat", sans-serif;
-    width: 80px;
-    height: 31px;
+    width: 15em;
+    height: 3em;
     background: transparent;
-    color: white;
+    color: black;
     display: flex;
-    border: 2px solid black;
+    border: 2px solid rgb(0, 0, 0);
     justify-content: space-around;
     align-items: center;
     font-size: 12px;
     font-weight: 600;
-    border-radius: .1em;
-    letter-spacing: .5px;
+    border-radius: .2em;
+    letter-spacing: 1px;
 }
 
-.auth-btn:hover {
+.admin-btn:hover {
     cursor: pointer;
     background: black;
-    border: 2px solid black;
+    border: 2px solid transparent;
     color: white;
     transition: all .2s ease-in-out;
 }
+
+.db-table-header {
+    display: flex;
+    box-sizing: border-box;
+}
+
+.table-header-wrapper {
+    display: flex;
+    width: 70%; 
+    margin: 0 auto;
+    border-bottom: 1px solid black; 
+    box-sizing: border-box;  
+}
+
+.card-name {
+   width: 30%;
+    height: 2em;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+}
+
+.card-info {
+    width: 25%;
+    height: 2em;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    box-sizing: border-box;
+}
+
+
