--- a/src/styles/products.scss
+++ b/src/styles/products.scss
@@ -1,10 +1,12 @@
 .product-parent {
-    position: absolute;
-    top: 100vh;
+    margin: 20px auto ;
     width: 100%;
     height: 250%;
     background: #efefef;
     box-sizing: border-box;
+    display: flex;
+    align-items: center;
+    justify-content: center;
     // display: grid;
 }
 
@@ -16,7 +18,7 @@
 }
 
 .product-wrapper {
-    margin-left: 13%;
+    margin-left: 14.5%;
     width: 100%;
     box-sizing: border-box;
     
@@ -25,15 +27,15 @@
 .products {
     box-sizing: border-box;
     margin-top: 20%;
-    height: 100%;
+    height: 900%;
     width: 75%;
     // width: 100%;
     display: grid;
     grid-template-columns: repeat(3, 1fr); 
     grid-auto-rows: 300px;
-    column-gap: 10px;
+    grid-column-gap: 20px;
     grid-row-gap: 20px;
-    position: relative;
+    // position: relative;
     // display: flex;
     // flex-wrap: wrap;
 }
@@ -51,7 +53,8 @@
 
 
 .image-container {
-    box-shadow: 0 0 5px rgba(0, 0, 0, 0.8);    
+    height: 300px;
+    box-shadow: 0 0 1px rgba(0, 0, 0, 0.4);    
     
     img {
       height: auto;
@@ -87,19 +90,23 @@
     position: absolute;
     height: 300px;
     width: 300px;
-    display: none;
+    opacity: 0;
     flex-direction: column;
     align-items: center;
-    justify-content: space-around;
-    background: rgba(0, 0, 0, 0.3);
-    transition: all .5s ease-in-out;
+    justify-content: center;
+    background: rgba(0, 0, 0, 0.7);
     color: white;
+
+    span #name {
+        margin-top: 20px;
+    }
 }
 
-.product-card:hover .product-hover {
+.product-card:hover .product-hover:hover {
+    opacity: 1;
     display: flex;
     position: absolute;
-    transition: all .5s ease-in-out;    
+    transition: opacity .4s ease-in-out;    
 }
 
 .loading-container {
