--- a/src/styles/cart.scss
+++ b/src/styles/cart.scss
@@ -111,14 +111,32 @@ $font-var: "Montserrat", sans-serif;
 }
 
 .cart-grid-header {
-    display: grid;
-    grid-template-columns: 40% 20% 20% 20%;
-    grid-template-rows: 2em;
-
-    span {
+    box-sizing: border-box;
     display: flex;
-    align-items: center;
-    justify-content: space-around;
+    position: relative;
+
+    span:nth-child(1) {
+        box-sizing: border-box;
+        display: flex;
+        align-items: center;
+        justify-content: flex-start;
+        width: 33%;
+        margin-left: 30px;
+    }
+
+    span:nth-child(2) {
+        position: absolute;
+        right: 44.5%;
+    }
+
+    span:nth-child(3) {
+        position: absolute;
+        right: 29%;
+    }
+
+    span:nth-child(4) {
+        position: absolute;
+        right: 60px;
     }
 
 }
