--- a/src/styles/products.scss
+++ b/src/styles/products.scss
@@ -1,7 +1,7 @@
 .product-parent {
     margin: 20px auto ;
     width: 100%;
-    height: 250%;
+    height: auto;
     background: #efefef;
     box-sizing: border-box;
     display: flex;
@@ -27,40 +27,37 @@
 .products {
     box-sizing: border-box;
     margin-top: 20%;
-    height: 900%;
-    width: 75%;
-    // width: 100%;
+    width: 80%;
     display: grid;
     grid-template-columns: repeat(3, 1fr); 
-    grid-auto-rows: 300px;
+    grid-auto-rows: auto;
     grid-column-gap: 20px;
     grid-row-gap: 20px;
-    // position: relative;
     // display: flex;
     // flex-wrap: wrap;
+    // align-items: center;
+    // justify-content: space-around;
 }
 
 .product-card {
     height: auto;
-    width: 300px;
-    // display: flex;
-    align-items: center;
+    width: 100%;
+    margin-bottom: 20px;
     justify-content: space-around;
-    // margin: 10px auto;
     transition: all .5s ease-in-out; 
     box-shadow: 0px, 0px, 20px rgba(0, 0, 0, 1);      
+    position: relative;
 }
 
 
 .image-container {
-    height: 300px;
+    height: 100%;
+    width: auto;
     box-shadow: 0 0 1px rgba(0, 0, 0, 0.4);    
     
     img {
-      height: auto;
+      height: 100%;
       width: 100%;
-      
-      
     }
 }
 
@@ -88,8 +85,8 @@
 
 .product-hover {
     position: absolute;
-    height: 300px;
-    width: 300px;
+    height: 100%;
+    width: 100%;
     opacity: 0;
     flex-direction: column;
     align-items: center;
