--- a/src/styles/productDetails.scss
+++ b/src/styles/productDetails.scss
@@ -13,26 +13,30 @@ $font-var: "Montserrat", sans-serif;
     height: 100vh;
     width: 100%;
     box-sizing: border-box;
+    // overflow-x: none;
 }
 
 .product-continer-left {
     height: 100vh;
-    // width: 60%;
+    // width: 100%;
+    // box-sizing: border-box;
 }
 
     .product-image-wrapper {
-      width: 60%;
+      width: 70%;
+    //   padding: 1em;
 }
 
 .prod-image {
     position: absolute;
-    transform: scale(.5);
-    top: -2%;
-    left: -13%;
+    height: 23em;
+    width: 32em;
+    top: 11em;
+    left: 10em;
 }
 
 .product-container-right {
-    width: 40%;
+    width: 30%;
     display: flex;
     flex-direction: column;
     align-items: left;
