fixing the product detail images

--- a/src/styles/productDetails.scss
+++ b/src/styles/productDetails.scss
@@ -150,6 +150,13 @@ $font-var: "Montserrat", sans-serif;
     cursor: pointer;
     text-decoration: underline;
 }
+
+.detail-photo-list {
+    margin: 0;
+    padding: 0;
+    width: 100%;
+}
+
 .bottom-section {
     height: 50vh;
     width: 100%;
