--- a/src/styles/detailPhotos.scss
+++ b/src/styles/detailPhotos.scss
@@ -6,7 +6,11 @@
 
 .photo-wrapper {
     box-sizing: border-box;
-    background-position: center;
+
+    img {
+        width: 100%;
+        height: 100vh;
+    }
     
 }
     
