--- a/src/styles/products.scss
+++ b/src/styles/products.scss
@@ -32,6 +32,7 @@
     width: 80%;
     display: flex;
     flex-wrap: wrap;
+    position: relative;
     // align-items: center;
 }
 
@@ -44,6 +45,16 @@
     transition: all .5s ease-in-out; 
     box-shadow: 0px, 0px, 2px rgba(0, 0, 0, .4);      
     position: relative;
+}
+
+.third-product {
+    position: absolute;
+    right:8em;
+    top: 19em;
+    height: 18em;
+    width: 18em;
+    transition: all .5s ease-in-out; 
+    box-shadow: 0px, 0px, 2px rgba(0, 0, 0, .4);      
 }
 
 .product-card {
@@ -112,6 +123,14 @@
     position: absolute;
     transition: opacity .4s ease-in-out;    
 }
+
+.third-product:hover .product-hover:hover {
+    opacity: 1;
+    display: flex;
+    position: absolute;
+    transition: opacity .4s ease-in-out;    
+}
+
 
 .product-card:hover .product-hover:hover {
     opacity: 1;
