--- a/src/styles/detailPhotos.scss
+++ b/src/styles/detailPhotos.scss
@@ -1,6 +1,6 @@
 .photo-wrapper {
     width: 100%;
-    height:100vh;
+    height: 140vh;
     box-sizing: border-box;
 }
 
@@ -9,7 +9,7 @@
 
     img {
         width: 100%;
-        height: 120vh;
+        height: 100%;
     }
     
 }
