--- a/src/styles/navbar.scss
+++ b/src/styles/navbar.scss
@@ -1,3 +1,7 @@
+.red {
+    color: red;
+}
+
 a {
     text-decoration: none;
 }
@@ -68,11 +72,13 @@ a {
 }
 
 .red {
+    color: red;
+}
+.store-wrapper {
+    a:hover {
+        cursor: pointer;
         color: red;
     }
-.store-wrapper:hover {
-    cursor: pointer;
-    color: red;
     .rotate {
         transform: rotate(-180);        
         transition: all .25s 0s;
