--- a/src/styles/products.scss
+++ b/src/styles/products.scss
@@ -45,7 +45,7 @@
         margin-bottom: 1em;
         margin-right: 1em;
         justify-content: space-around;
-        transition: all .5s ease-in-out; 
+        transition: all 0.55s ease-in-out; 
         box-shadow: 0px, 0px, 2px rgba(0, 0, 0, .4);      
         position: relative;
     }
@@ -56,7 +56,7 @@
         top: 19em;
         height: 18em;
         width: 18em;
-        transition: all .5s ease-in-out; 
+        transition: all 0.55s ease-in-out; 
         box-shadow: 0px, 0px, 2px rgba(0, 0, 0, .4);      
     }
     
@@ -66,7 +66,7 @@
         margin-bottom: 1em;
         margin-right: 1em;
         justify-content: space-around;
-        transition: all .5s ease-in-out; 
+        transition: all 0.55s ease-in-out; 
         box-shadow: 0px, 0px, 2px rgba(0, 0, 0, .4);      
         position: relative;
     }
@@ -124,14 +124,14 @@
         opacity: 1;
         display: flex;
         position: absolute;
-        transition: opacity .4s ease-in-out;    
+        transition: opacity 0.55s ease-in-out;    
     }
     
     .third-product:hover .product-hover:hover {
         opacity: 1;
         display: flex;
         position: absolute;
-        transition: opacity .4s ease-in-out;    
+        transition: opacity 0.55s ease-in-out;    
     }
     
     
@@ -139,7 +139,7 @@
         opacity: 1;
         display: flex;
         position: absolute;
-        transition: opacity .4s ease-in-out;    
+        transition: opacity 0.55s ease-in-out;    
     }
     
     .loading-container {
@@ -230,7 +230,7 @@
         margin-bottom: 1em;
         margin-right: 1em;
         justify-content: space-around;
-        transition: all .5s ease-in-out; 
+        transition: all 0.55s ease-in-out; 
         box-shadow: 0px, 0px, 2px rgba(0, 0, 0, .4);      
         position: relative;
     }
@@ -240,7 +240,7 @@
         height: 18em;
         width: 18em;
         // justify-content: space-around;
-        transition: all .5s ease-in-out; 
+        transition: all 1000ms ease-in-out; 
         box-shadow: 0px, 0px, 2px rgba(0, 0, 0, .4);     
     }
     
@@ -250,7 +250,7 @@
         margin-bottom: 1em;
         margin-right: 1em;
         justify-content: space-around;
-        transition: all .5s ease-in-out; 
+        transition: all 0.55s ease-in-out; 
         box-shadow: 0px, 0px, 2px rgba(0, 0, 0, .4);      
         position: relative;
     }
@@ -308,14 +308,14 @@
         opacity: 1;
         display: flex;
         position: absolute;
-        transition: opacity .4s ease-in-out;    
+        transition: opacity 0.55s ease-in-out;    
     }
     
     .third-product:hover .product-hover:hover {
         opacity: 1;
         display: flex;
         position: absolute;
-        transition: opacity .4s ease-in-out;    
+        transition: opacity 0.55s ease-in-out;    
     }
     
     
@@ -323,7 +323,7 @@
         opacity: 1;
         display: flex;
         position: absolute;
-        transition: opacity .4s ease-in-out;    
+        transition: opacity 0.55s ease-in-out;    
     }
     
     .loading-container {
@@ -414,7 +414,7 @@
         margin-bottom: 1em;
         margin-right: 1em;
         justify-content: space-around;
-        transition: all .5s ease-in-out; 
+        transition: all 0.55s ease-in-out; 
         box-shadow: 0px, 0px, 2px rgba(0, 0, 0, .4);      
     }
     
@@ -425,7 +425,7 @@
         margin-bottom: 1em;
         margin-right: 1em;
         // justify-content: space-around;
-        transition: all .5s ease-in-out; 
+        transition: all 0.55s ease-in-out; 
         box-shadow: 0px, 0px, 2px rgba(0, 0, 0, .4);     
     }
     
@@ -435,7 +435,7 @@
         margin-bottom: 1em;
         margin-right: 1em;
         justify-content: space-around;
-        transition: all .5s ease-in-out; 
+        transition: all 0.55s ease-in-out; 
         box-shadow: 0px, 0px, 2px rgba(0, 0, 0, .4);      
     }
     
@@ -492,14 +492,14 @@
         opacity: 1;
         display: flex;
         position: absolute;
-        transition: opacity .4s ease-in-out;    
+        transition: opacity 0.55s ease-in-out;    
     }
     
     .third-product:hover .product-hover:hover {
         opacity: 1;
         display: flex;
         position: absolute;
-        transition: opacity .4s ease-in-out;    
+        transition: opacity 0.55s ease-in-out;    
     }
     
     
@@ -507,7 +507,7 @@
         opacity: 1;
         display: flex;
         position: absolute;
-        transition: opacity .4s ease-in-out;    
+        transition: opacity 0.55s ease-in-out;    
     }
     
     .loading-container {
