trying to implement infinite scroll

--- a/src/styles/products.scss
+++ b/src/styles/products.scss
@@ -1,6 +1,6 @@
 @media only screen and (max-width: 2400px) {
     .product-parent {
-        margin: 0px auto ;
+        // margin: 0px auto ; 
         width: 100%;
         height: auto;
         background: #efefef;
@@ -30,7 +30,7 @@
         box-sizing: border-box;
         margin-top: 20%;
         margin-left: -50%;
-        margin-right: -58.5%;
+        margin-right: -62%;
         width: 1025px;
         display: flex;
         flex-wrap: wrap;
