refining layout and css

--- a/src/styles/landingPage.scss
+++ b/src/styles/landingPage.scss
@@ -49,6 +49,12 @@
     margin-right: 4px;
 }
 
+.product-email-wrapper {
+    width: 59em;
+    margin: 0 auto;
+    position: relative;
+}
+
 
 @media only screen
 and (max-width: 568px) {
