--- a/src/styles/store.scss
+++ b/src/styles/store.scss
@@ -3,3 +3,9 @@
     width: 100%;
     box-sizing: border-box;
 }
+
+.product-store-wrapper {
+    width: 59em;
+    margin: 0 auto;
+    position: relative;
+}
