--- a/src/styles/products.scss
+++ b/src/styles/products.scss
@@ -1,14 +1,14 @@
 @media only screen and (max-width: 2400px) {
     .product-parent {
         // margin: 0px auto ; 
-        width: 100%;
-        height: auto;
-        background: #efefef;
-        box-sizing: border-box;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        position: relative;
+        // width: 100%;
+        // height: auto;
+        // background: #efefef;
+        // box-sizing: border-box;
+        // display: flex;
+        // align-items: center;
+        // justify-content: center;
+        // position: relative;
         // display: grid;
     }
     
@@ -28,14 +28,12 @@
     
     .products {
         box-sizing: border-box;
-        margin-top: 20%;
-        margin-left: -50%;
-        margin-right: -62%;
-        width: 1025px;
+        margin-top: 35%;
+        width: 100%;
         display: flex;
         flex-wrap: wrap;
         position: relative;
-        // align-items: center;
+        margin-left: 1.5em;
     }
     
     
@@ -44,19 +42,19 @@
         width: 37em;
         margin-bottom: 1em;
         margin-right: 1em;
-        justify-content: space-around;
-        transition: all 0.55s ease-in-out; 
+        // justify-content: space-around;
+        transition: all 0.5s ease-in-out; 
         box-shadow: 0px, 0px, 2px rgba(0, 0, 0, .4);      
         position: relative;
     }
     
     .third-product {
         position: absolute;
-        right: 12.5%;
+        right: 5.1%;
         top: 19em;
         height: 18em;
         width: 18em;
-        transition: all 0.55s ease-in-out; 
+        transition: all 0.5s ease-in-out; 
         box-shadow: 0px, 0px, 2px rgba(0, 0, 0, .4);      
     }
     
@@ -66,7 +64,7 @@
         margin-bottom: 1em;
         margin-right: 1em;
         justify-content: space-around;
-        transition: all 0.55s ease-in-out; 
+        transition: all 0.5s ease-in-out; 
         box-shadow: 0px, 0px, 2px rgba(0, 0, 0, .4);      
         position: relative;
     }
@@ -85,8 +83,9 @@
     .euro {
         height: 12px;
         width: 12px;
-        fill: rgb(255, 255, 255);
-        outline: white;
+        margin-left: 2px;
+        // fill: rgb(255, 255, 255);
+        // outline: white;
         
     }
     
@@ -124,14 +123,14 @@
         opacity: 1;
         display: flex;
         position: absolute;
-        transition: opacity 0.55s ease-in-out;    
+        transition: opacity 0.5s ease-in-out;    
     }
     
     .third-product:hover .product-hover:hover {
         opacity: 1;
         display: flex;
         position: absolute;
-        transition: opacity 0.55s ease-in-out;    
+        transition: opacity 0.5s ease-in-out;    
     }
     
     
@@ -139,7 +138,7 @@
         opacity: 1;
         display: flex;
         position: absolute;
-        transition: opacity 0.55s ease-in-out;    
+        transition: opacity 0.5s ease-in-out;    
     }
     
     .loading-container {
@@ -230,7 +229,7 @@
         margin-bottom: 1em;
         margin-right: 1em;
         justify-content: space-around;
-        transition: all 0.55s ease-in-out; 
+        transition: all 0.5s ease-in-out; 
         box-shadow: 0px, 0px, 2px rgba(0, 0, 0, .4);      
         position: relative;
     }
@@ -250,7 +249,7 @@
         margin-bottom: 1em;
         margin-right: 1em;
         justify-content: space-around;
-        transition: all 0.55s ease-in-out; 
+        transition: all 0.5s ease-in-out; 
         box-shadow: 0px, 0px, 2px rgba(0, 0, 0, .4);      
         position: relative;
     }
@@ -308,14 +307,14 @@
         opacity: 1;
         display: flex;
         position: absolute;
-        transition: opacity 0.55s ease-in-out;    
+        transition: opacity 0.5s ease-in-out;    
     }
     
     .third-product:hover .product-hover:hover {
         opacity: 1;
         display: flex;
         position: absolute;
-        transition: opacity 0.55s ease-in-out;    
+        transition: opacity 0.5s ease-in-out;    
     }
     
     
@@ -323,7 +322,7 @@
         opacity: 1;
         display: flex;
         position: absolute;
-        transition: opacity 0.55s ease-in-out;    
+        transition: opacity 0.5s ease-in-out;    
     }
     
     .loading-container {
@@ -414,7 +413,7 @@
         margin-bottom: 1em;
         margin-right: 1em;
         justify-content: space-around;
-        transition: all 0.55s ease-in-out; 
+        transition: all 0.5s ease-in-out; 
         box-shadow: 0px, 0px, 2px rgba(0, 0, 0, .4);      
     }
     
@@ -425,7 +424,7 @@
         margin-bottom: 1em;
         margin-right: 1em;
         // justify-content: space-around;
-        transition: all 0.55s ease-in-out; 
+        transition: all 0.5s ease-in-out; 
         box-shadow: 0px, 0px, 2px rgba(0, 0, 0, .4);     
     }
     
@@ -435,7 +434,7 @@
         margin-bottom: 1em;
         margin-right: 1em;
         justify-content: space-around;
-        transition: all 0.55s ease-in-out; 
+        transition: all 0.5s ease-in-out; 
         box-shadow: 0px, 0px, 2px rgba(0, 0, 0, .4);      
     }
     
@@ -492,14 +491,14 @@
         opacity: 1;
         display: flex;
         position: absolute;
-        transition: opacity 0.55s ease-in-out;    
+        transition: opacity 0.5s ease-in-out;    
     }
     
     .third-product:hover .product-hover:hover {
         opacity: 1;
         display: flex;
         position: absolute;
-        transition: opacity 0.55s ease-in-out;    
+        transition: opacity 0.5s ease-in-out;    
     }
     
     
@@ -507,7 +506,7 @@
         opacity: 1;
         display: flex;
         position: absolute;
-        transition: opacity 0.55s ease-in-out;    
+        transition: opacity 0.5s ease-in-out;    
     }
     
     .loading-container {
