--- a/src/styles/products.scss
+++ b/src/styles/products.scss
@@ -289,8 +289,8 @@
     
     .product-hover {
         position: absolute;
-        height: 18em;
-        width: 18em;
+        height: 100%;
+        width: 100%;
         opacity: 0;
         flex-direction: column;
         align-items: center;
@@ -302,6 +302,18 @@
             margin-top: 20px;
         }
     }
+
+    .third-hover {
+        position: absolute;
+        height: 18em;
+        width: 18em;
+        opacity: 0;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        background: rgba(0, 0, 0, 0.7);
+        color: white;
+    }
     
     .first-product:hover .product-hover:hover {
         opacity: 1;
@@ -310,7 +322,7 @@
         transition: opacity 0.5s ease-in-out;    
     }
     
-    .third-product:hover .product-hover:hover {
+    .third-product:hover .third-hover:hover {
         opacity: 1;
         display: flex;
         position: absolute;
