--- a/src/styles/products.scss
+++ b/src/styles/products.scss
@@ -118,6 +118,18 @@
             margin-top: 20px;
         }
     }
+
+    .third-hover {
+        position: absolute;
+        height: 18em;
+        width: 18em;
+        opacity: 0;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        background: rgba(0, 0, 0, 0.7);
+        color: white;
+    }
     
     .first-product:hover .product-hover:hover {
         opacity: 1;
@@ -126,7 +138,7 @@
         transition: opacity 0.5s ease-in-out;    
     }
     
-    .third-product:hover .product-hover:hover {
+    .third-product:hover .third-hover:hover {
         opacity: 1;
         display: flex;
         position: absolute;
