added an infinite scroller which will infinitely recycle products

--- a/src/styles/landingPage.scss
+++ b/src/styles/landingPage.scss
@@ -55,6 +55,12 @@
     position: relative;
 }
 
+.infinite-wrapper {
+    width: 59em;
+    margin: 0 auto;
+    position: relative;
+}
+
 
 @media only screen
 and (max-width: 568px) {
