--- a/src/styles/products.scss
+++ b/src/styles/products.scss
@@ -156,8 +156,7 @@
     }
     
     .loading-container {
-        margin-top: 15%;
-        margin-right: 25%;
+        margin: 20% auto;
         display: flex;
         flex-direction: column;
         align-content: center;
