--- a/src/styles/landingPage.scss
+++ b/src/styles/landingPage.scss
@@ -64,6 +64,12 @@
 
 @media only screen
 and (max-width: 568px) {
+
+    .product-email-wrapper {
+        width: 20em;
+        margin: 0 auto;
+        position: relative;
+    }
       
     .logo-container {
         display: none;
