--- a/src/styles/products.scss
+++ b/src/styles/products.scss
@@ -558,6 +558,9 @@
         }
     
     }
+
+    @media only screen and (min-width: 568px) {
+    }
     
     .loading-wrapper {
         display: flex;
