--- a/src/styles/productDetails.scss
+++ b/src/styles/productDetails.scss
@@ -78,16 +78,16 @@ $font-var: "Montserrat", sans-serif;
         letter-spacing: 2px;
     }
 
-    .weight {
-        margin-left: 17.5%;
+    .specs-weight {
+        margin-left: 20.75%;
     }
 
-    .item {
-        margin-left: 15.5%
+    .specs-item {
+        margin-left: 18.5%
     }
 
     .price {
-        margin-left: 20%;
+        margin-left: 25.5%;
         display: flex;
         flex-direction: row;
         align-items: center;
